--- a/public/style.css
+++ b/public/style.css
@@ -16,16 +16,18 @@ html, body {
 
 body {
   display: grid;
-  grid-template-columns: 10px 1fr 10px;
+  grid-template-columns: 20px 1fr 20px;
 }
 
 body > * {
   grid-column: 2;
 }
+
 h1, h2, h3 {
   font-weight: 300;
   margin: 0;
 }
+
 b {
   font-weight: 900;
 }
@@ -37,6 +39,7 @@ b {
   position: fixed;
   top: 0;
   left: 0;
+  right: 0;
   width: 100%;
   height: 50px;
   background-color: #1E1E1E;
@@ -70,15 +73,21 @@ b {
 #home {
   padding-top: 50px;
   height: 100vh;
-}
-
-.background-image-container {
-  position: fixed;
-  display: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .header-container {
   display: flex;
   flex-direction: column;
-  align-items: space-between;
+  padding: 5px;
+}
+
+.header-container > * {
+  margin: 5px;
+}
+
+.head-subtitle, .action-button {
+  align-self: center;
 }
