--- a/public/style.css
+++ b/public/style.css
@@ -67,11 +67,14 @@ b {
   color: white;
 }
 
+.page-section {
+  padding-top: 50px;
+}
+
 /* ====== */
 /* Header */
 /* ====== */
 #home {
-  padding-top: 50px;
   height: 100vh;
   display: flex;
   justify-content: center;
@@ -90,4 +93,48 @@ b {
 
 .head-subtitle, .action-button {
   align-self: center;
+}
+
+/* ======== */
+/* About Me */
+/* ======== */
+
+#about-me {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.section-title {
+  text-transform: uppercase;
+  font-style: italic;
+  text-decoration: underline;
+  font-weight: bolder;
+  font-size: 50px;
+}
+
+#about-me-image {
+  display: flex;
+  justify-content: center;
+}
+
+#about-me-image > img {
+  width: 80%;
+  border-radius: 30px;
+}
+
+#about-me-external-links-container {
+  background-color: #191818;
+  border-radius: 30px;
+  padding: 0.5em 1em;
+}
+
+#about-me-external-links-container > ul {
+  text-decoration: none;
+  list-style-type: none;
+}
+
+#about-me-external-links-container > ul > li > a {
+  text-decoration: none;
+  color: white;
 }
