--- a/public/style.css
+++ b/public/style.css
@@ -122,12 +122,20 @@ b {
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: space-between;
 }
 
 .about-me-container {
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+.about-me-container > * {
+  background-color: var(--dark-colour-level-two);
+  border-radius: 30px;
+  box-shadow: 0px 10px 6px -6px black;
+  padding: 1em;
 }
 
 .page-section > .section-title {
@@ -139,14 +147,8 @@ b {
 }
 
 .about-me-image {
-  display: flex;
-  justify-content: center;
   background-color: unset;
-}
-
-.about-me-image {
-  border-radius: 30px;
-  width: auto;
+  padding: 0;
 }
 
 .aboout-me-external-links-container {
@@ -164,4 +166,3 @@ b {
   text-decoration: none;
   color: white;
 }
-
