--- a/public/style.css
+++ b/public/style.css
@@ -153,20 +153,24 @@ b {
 }
 
 .about-me-external-links-container {
-  display: grid;
-  grid-template-columns: 1fr;
-  gap: 1em;
+  display: flex;
+  justify-content: center;
   width: 425px;
 }
 
 .links-grid {
   display: grid;
-  grid-template-columns: 20px 1fr;
-  gap: 0.5em;
+  grid-template-columns: 50px 1fr;
+  gap: 1em;
+  width: 80%;
 }
 
-.links-grid > img {
+.links-grid :nth-child(odd) {
   justify-self: center;
+}
+
+.links-grid :nth-child(even) {
+  justify-self: start;
 }
 
 .about-me-external-links-container a {
@@ -174,6 +178,7 @@ b {
   color: white;
 }
 
-.about-me-external-links-container > .action-button {
+.links-grid > .action-button {
   grid-column: 1 / -1;
+  width: 100%;
 }
