--- a/public/style.css
+++ b/public/style.css
@@ -10,6 +10,7 @@
   --dark-colour-level-one: #121212;
   --dark-colour-level-two: #191818;
   --dark-colour-level-three: #1E1E1E;
+  --dark-colour-shadow: #00000032;
 }
 
 /* ======== */
@@ -68,7 +69,7 @@ b {
 .page-section > * {
   background-color: var(--dark-colour-level-two);
   border-radius: 30px;
-  box-shadow: 0px 10px 6px -6px black;
+  box-shadow: 0px 10px 6px -6px var(--dark-colour-shadow);
   padding: 1em;
 }
 
@@ -86,7 +87,7 @@ b {
   background-color: var(--dark-colour-level-three);
   align-items: center;
   justify-content: space-between;
-  box-shadow: 0px 10px 6px -6px black;
+  box-shadow: 0px 10px 6px -6px var(--dark-colour-shadow);
 }
 
 .switch-toggle {
@@ -181,4 +182,30 @@ b {
 .links-grid > .action-button {
   grid-column: 1 / -1;
   width: 100%;
+}
+
+.about-me-skills {
+  display: grid;
+  grid-template-columns: auto;
+  gap: 1em;
+}
+
+.skills-container {
+  display: grid;
+  grid-template-columns: auto;
+  gap: 1em;
+}
+
+.skills-container > ul {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 1em;
+}
+
+.skills-container > ul > li {
+  background-color: var(--dark-colour-level-three);
+  text-align: center;
+  border-radius: 5px;
+  box-shadow: 2px 2px 6px var(--dark-colour-shadow);
+  padding: 1em;
 }
