--- a/public/style.css
+++ b/public/style.css
@@ -39,7 +39,7 @@ body > * {
   grid-column: 2;
 }
 
-h1, h2, h3 {
+h1, h2, h3, h4 {
   font-weight: 300;
   margin: 0;
 }
@@ -184,6 +184,10 @@ b {
   width: 100%;
 }
 
+.about-me-blurb {
+  width: 50%;
+}
+
 .about-me-skills {
   display: grid;
   grid-template-columns: auto;
@@ -194,6 +198,7 @@ b {
   display: grid;
   grid-template-columns: auto;
   gap: 1em;
+  width: 100%;
 }
 
 .skills-container > ul {
@@ -208,4 +213,40 @@ b {
   border-radius: 5px;
   box-shadow: 2px 2px 6px var(--dark-colour-shadow);
   padding: 1em;
+}
+
+.about-me-experience {
+  width: 100%;
+}
+
+.about-me-experience > h2, .about-me-education > h2 {
+  font-style: italic;
+  font-weight: bolder;
+  font-size: 2em;
+  position: relative;
+  bottom: 1.25em;
+}
+
+.about-me-experience > .experience-container {
+  background-color: var(--dark-colour-level-three);
+  border-radius: 10px;
+  padding: 1em;
+}
+
+.experience-header > h4 {
+  font-style: italic;
+}
+
+.experience-sub-header {
+  display: flex;
+  justify-content: space-between;
+}
+
+.experience-container > ul {
+  padding-left: 3em;
+  list-style-type: square;
+}
+
+.about-me-education {
+  width: 100%;
 }
