--- a/public/style.css
+++ b/public/style.css
@@ -62,7 +62,7 @@ b {
   padding-top: 50px;
   display: grid;
   grid-template-columns: auto;
-  gap: 1em;
+  gap: 2em;
   justify-items: center;
 }
 
@@ -217,6 +217,7 @@ b {
 
 .about-me-experience {
   width: 100%;
+  padding-bottom: 0.5em;
 }
 
 .about-me-experience > h2, .about-me-education > h2 {
@@ -230,7 +231,7 @@ b {
 .about-me-experience > .experience-container {
   background-color: var(--dark-colour-level-three);
   border-radius: 10px;
-  padding: 1em;
+  padding: 1em ;
 }
 
 .experience-header > h4 {
@@ -242,6 +243,11 @@ b {
   justify-content: space-between;
 }
 
+.experience-container {
+  position: relative;
+  bottom: 1.25em;
+}
+
 .experience-container > ul {
   padding-left: 3em;
   list-style-type: square;
@@ -250,3 +256,8 @@ b {
 .about-me-education {
   width: 100%;
 }
+
+.about-me-experience, .about-me-education {
+  margin-top: 2em;
+}
+
