--- a/public/style.css
+++ b/public/style.css
@@ -277,3 +277,25 @@ b {
   gap: 1em;
 }
 
+.portfolio-nav {
+  background-color: unset;
+  border-radius: 0px;
+  box-shadow: unset;
+}
+
+.portfolio-nav > ul {
+  display: flex;
+  gap: 1em;
+}
+
+.portfolio-nav > ul > li {
+  background-color: var(--dark-colour-level-three);
+  box-shadow: 0px 10px 6px -6px var(--dark-colour-shadow);
+  padding: 0.75em 1em;
+  border-radius: 15px;
+}
+
+.portfolio-nav > ul > li:first-child {
+  background-color: #153C70;
+}
+
