--- a/public/style.css
+++ b/public/style.css
@@ -339,6 +339,14 @@ b {
   align-self: center;
 }
 
+.portfolio-image-container > img {
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+  border-radius: 20px;
+  box-shadow: 0px 10px 6px -6px var(--dark-colour-shadow);
+}
+
 .technologies-used {
   display: flex;
   flex-direction: column;
