--- a/public/style.css
+++ b/public/style.css
@@ -32,7 +32,6 @@ body {
   background-color: var(--dark-colour-level-one);
   display: grid;
   grid-template-columns: 40px 1fr 40px;
-  max-width: 100vw;
 }
 
 body > * {
@@ -142,7 +141,7 @@ b {
   font-style: italic;
   text-decoration: underline;
   font-weight: bolder;
-  font-size: 50px;
+  font-size: 2em;
   background-color: unset ;
   border-radius: 0 ;
   box-shadow: unset ;
@@ -152,19 +151,20 @@ b {
 .about-me-image {
   background-color: unset;
   padding: 0;
+  width: 100%;
 }
 
 .about-me-external-links-container {
   display: flex;
   justify-content: center;
-  width: 425px;
+  width: 100%;
 }
 
 .links-grid {
   display: grid;
   grid-template-columns: 50px 1fr;
   gap: 1em;
-  width: 80%;
+  width: 100%;
 }
 
 .links-grid :nth-child(odd) {
@@ -186,25 +186,25 @@ b {
 }
 
 .about-me-blurb {
-  width: 50%;
+  width: 100%;
 }
 
 .about-me-skills {
   display: grid;
   grid-template-columns: auto;
   gap: 1em;
+  width: 100%;
 }
 
 .skills-container {
-  display: grid;
-  grid-template-columns: auto;
+  display: flex;
+  flex-direction: column;
   gap: 1em;
   width: 100%;
 }
 
 .skills-container > ul {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
   gap: 1em;
 }
 
@@ -285,6 +285,7 @@ b {
 
 .portfolio-nav > ul {
   display: flex;
+  flex-wrap: wrap;
   gap: 1em;
 }
 
@@ -321,15 +322,14 @@ b {
 .project-title {
   font-style: italic;
   font-weight: 600;
-  font-size: 3em;
+  font-size: 2em;
   position: relative;
   bottom: 1.25em;
   left: 1em;
 }
 
 .portfolio-image-container {
-  width: 250px;
-  height: 250px;
+  width: 70%;
   background-color: var(--dark-colour-level-three);
   box-shadow: 0px 10px 6px -6px var(--dark-colour-shadow);
   display: flex;
@@ -361,6 +361,7 @@ b {
 .technologies-used-container {
   display: flex;
   gap: 1em;
+  flex-wrap: wrap;
 }
 
 .technologies-used-container > div {
